<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World</string>
    <string name="buttonText">I\'m a Button</string>
    <string name="login">Login</string>
    <string name="loginName">Login Name</string>
    <string name="Password">Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="ok">Yes</string>
    <string name="dialog_message">Do you want to close?</string>
    <string name="dialog_title">Close?</string>
    <string name="cancel">Cancel</string>
    <string name="checkbox_response">ListItemsActivity passed: My information to share</string>
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="pick_color">Do you want to go back?</string>
    <string name="name">Message</string>
    <string name="weather">Weather Update</string>
    <string name="current_temp">Current temp</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
</resources>
