<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textAlignment="center"
        android:id="@+id/helloWorld"
        android:textSize="25sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/clickMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:layout_gravity="center">

    </Button>

    <Button
        android:id="@+id/startChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startChat"
        android:layout_gravity="center">

    </Button>

    <Button
        android:id="@+id/testToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Toolbar"
        android:layout_gravity="center"/>

</LinearLayout>