<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherForecast">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/titleWeather"
        android:padding="15dp"
        android:text="@string/weather"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageWeather"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentTemp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minTemp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/currentTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:text="@string/current_temp"
        android:textAlignment="textEnd"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/minTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentTempText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:text="@string/min_temp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/maxTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minTempText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:text="@string/max_temp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_horizontal1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageWeather"
        android:visibility="invisible" />
</RelativeLayout>